core: Add support for ACL entries with keys

This adds support for <gAcl:withKey/> elements, allowing for
authorisation keys in ACLs, e.g. for Google Documents.

This adds the following API:
 • GDataAccessRule:key
 • gdata_access_rule_get_key()
and appropriate tests.

https://bugzilla.gnome.org/show_bug.cgi?id=690628