gdata/gdata-access-rule.h
@@ -106,6 +106,7 @@ void gdata_access_rule_set_role (GDataAccessRule *self, const gchar *role);
 void gdata_access_rule_get_scope (GDataAccessRule *self, const gchar **type, const gchar **value);
 void gdata_access_rule_set_scope (GDataAccessRule *self, const gchar *type, const gchar *value);
 gint64 gdata_access_rule_get_edited (GDataAccessRule *self);
+const gchar *gdata_access_rule_get_key (GDataAccessRule *self) G_GNUC_PURE;
 
 G_END_DECLS
 
